# AIE5

./: README.md
00_AIM_Quicklinks/: README.md
00_OpenAI API Key Setup/: README.md
01_Prompt Engineering and Prototyping Best Practices/: README.md
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  README.md  pyproject.toml
02_Embeddings_and_RAG/aimakerspace/: text_utils.py
03_End-to-End_RAG/: README.md
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb  README.md  pyproject.toml
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  README.md  pyproject.toml
06_Multi_Agent_with_LangGrap/: Another_copy_of_Multi_Agent_RAG_LangGraph.ipynb  README.md
07_Synthetic_Data_Generation_and_LangSmith/: README.md  ai_across_years_kg.json  pyproject.toml
07_Synthetic_Data_Generation_and_LangSmith/data/: 2023_llms.html  2024_llms.html
08_Evaluating_RAG_With_Ragas/: Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  README.md  pyproject.toml
09_Finetuning_Embeddings/: README.md  pyproject.toml
10_Finetuning_Reasoning_Model/: AI_Makerspace_Unsloth_GRPO_Training.ipynb  README.md
11_Midterms/: Notes.txt  README.md
13_Advanced_Retrieval/: README.md  pyproject.toml
14_Open_DeepResearch/: README.md  open-deep-research.ipynb  pyproject.toml
15_Open_Source_Endpoints/: README.md
15_Open_Source_Endpoints/Application_Start/: Dockerfile  README.md  app.py
16_LLMOps/colab/: README.md  pyproject.toml
16_LLMOps/deep_research/: Dockerfile  README.md  pyproject.toml
16_LLMOps/deep_research/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
16_LLMOps/deep_research/open_deep_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
16_LLMOps/deep_research/src/open_deep_research/: configuration.py  graph.ipynb
Setting Up Git/: README.md
