[project]
name = "05-our-first-agent-with-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.1.3",
    "duckduckgo-search==5.3.1b1",
    "jupyter>=1.1.1",
    "langchain>=0.3.15",
    "langchain-community>=0.3.15",
    "langchain-openai>=0.3.2",
    "langgraph>=0.2.67",
]
