[project]
name = "08-evaluating-rag-with-ragas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-cohere>=0.4.2",
    "langchain-community==0.3.14",
    "langchain-openai==0.2.14",
    "langchain-qdrant>=0.2.0",
    "langgraph==0.2.61",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "ragas==0.2.10",
    "unstructured>=0.14.8",
]
