[project]
name = "09-finetuning-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.3.0",
    "beautifulsoup4>=4.13.3",
    "datasets>=3.2.0",
    "faiss-cpu>=1.10.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.34",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.4",
    "langchain-text-splitters>=0.3.6",
    "lxml>=5.3.1",
    "nltk==3.9.1",
    "pyarrow>=19.0.0",
    "pymupdf>=1.25.3",
    "python-pptx==1.0.2",
    "sentence-transformers>=3.4.1",
    "transformers[torch]>=4.48.3",
    "wandb>=0.19.6",
]
