[project]
name = "16-llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-community==0.3.0",
    "langchain-openai==0.2.0",
    "langchain==0.3.0",
    "numpy==1.26.4",
    "tenacity==8.1.0",
    "pymupdf==1.24.10",
    "qdrant-client==1.11.2",
    "langchain-qdrant==0.1.4",
    "langsmith==0.1.121",
    "langchain-huggingface>=0.1.0",
    "jupyter>=1.1.1",
]
